--- a/phosphor/meta.yaml
+++ b/phosphor/meta.yaml
@@ -24,8 +24,10 @@ requirements:
 about:
   home: https://github.com/phosphorjs/phosphor
   license: BSD 3-clause
-  summary: PhosphorJS provides a rich set of widgets, layouts, events, and data structures. \
-           These enable developers to construct advanced, production-quality, desktop-like web \
-           applications that would be otherwise impossible using CSS alone.
-
+  
+  summary: 'PhosphorJS provides a rich set of widgets, layouts, events, and data structures.'
+  
+  description: "PhosphorJS provides a rich set of widgets, layouts, events, and data structures. \
+    \ These enable developers to construct advanced, production-quality, desktop-like web \
+    \ applications that would be otherwise impossible using CSS alone."
 
