--- a/daphne/meta.yaml
+++ b/daphne/meta.yaml
@@ -41,9 +41,9 @@ test:
 
 about:
   home: https://github.com/django/daphne
-  license: BSD License
+  license: BSD 3-clause 
   license_family: BSD
-  license_file: ''
+  license_file: LICENSE
   summary: Django ASGI (HTTP/WebSocket) server
   description: "daphne\n======\n\n.. image:: https://api.travis-ci.org/django/daphne.svg\n    :target: https://travis-ci.org/django/daphne\n\n.. image:: https://img.shields.io/pypi/v/daphne.svg\n    :target:\
     \ https://pypi.python.org/pypi/daphne\n\nDaphne is a HTTP, HTTP2 and WebSocket protocol server for\n`ASGI <https://channels.readthedocs.io/en/latest/asgi.html>`_, and developed\nto power Django Channels.\n\
@@ -72,8 +72,8 @@ about:
     That also contains advice on how to set up the development environment and run the tests.\n\n\nMaintenance and Security\n------------------------\n\nTo report security issues, please contact security@djangoproject.com.\
     \ For GPG\nsignatures and more security process information, see\nhttps://docs.djangoproject.com/en/dev/internals/security/.\n\nTo report bugs or request new features, please open a new GitHub issue.\n\
     \nThis repository is part of the Channels project. For the shepherd and maintenance team, please see the\n`main Channels readme <https://github.com/django/channels/blob/master/README.rst>`_.\n"
-  doc_url: ''
-  dev_url: ''
+  doc_url: https://channels.readthedocs.io/en/stable/
+  dev_url: https://github.com/django/daphne
 
 extra:
   recipe-maintainers: ''
