--- a/channels/meta.yaml
+++ b/channels/meta.yaml
@@ -46,9 +46,9 @@ test:
 
 about:
   home: http://github.com/django/channels
-  license: BSD License
+  license: BSD 3-clause 
   license_family: BSD
-  license_file: ''
+  license_file: LICENSE
   summary: Brings event-driven capabilities to Django with a channel system. Django 1.8 and up only.
   description: "Django Channels\n===============\n\n.. image:: https://api.travis-ci.org/django/channels.svg\n    :target: https://travis-ci.org/django/channels\n\n.. image:: https://readthedocs.org/projects/channels/badge/?version=latest\n\
     \    :target: https://channels.readthedocs.io/en/latest/?badge=latest\n\n.. image:: https://img.shields.io/pypi/v/channels.svg\n    :target: https://pypi.python.org/pypi/channels\n\n.. image:: https://img.shields.io/pypi/l/channels.svg\n\
@@ -67,8 +67,8 @@ about:
     \ is made up of several packages; the others are:\n\n* `Daphne <https://github.com/django/daphne/>`_, the HTTP and Websocket termination server\n* `asgiref <https://github.com/django/asgiref/>`_, the\
     \ base ASGI library/memory backend\n* `asgi_redis <https://github.com/django/asgi_redis/>`_, the Redis channel backend\n* `asgi_rabbitmq <https://github.com/proofit404/asgi_rabbitmq/>`_, the RabbitMQ\
     \ channel backend\n* `asgi_ipc <https://github.com/django/asgi_ipc/>`_, the POSIX IPC channel backend\n"
-  doc_url: ''
-  dev_url: ''
+  doc_url: https://channels.readthedocs.io/en/stable/
+  dev_url: http://github.com/django/channels
 
 extra:
   recipe-maintainers: ''
