--- a/whichcraft/meta.yaml
+++ b/whichcraft/meta.yaml
@@ -36,9 +36,12 @@ test:
 about:
   home: https://github.com/{{ gh_org }}/{{ name }}
   license: BSD-3-Clause
+  license_file: LICENSE
+  dev_url: https://github.com/pydanny/whichcraft
   summary: >
             This package provides cross-platform cross-python shutil.which
             functionality.
+
 
 extra:
   recipe-maintainers:
